--- a/src/App.css
+++ b/src/App.css
@@ -39,15 +39,37 @@
 h1 {
   font-family: Georgia, "Times New Roman", Times, serif;
   color: cyan;
+  text-align: center;
 }
 h2 {
   font-style: unset;
   font-stretch: extra-expanded;
   font-family: fantasy;
   color: chocolate;
+  text-align: center;
+}
+h3 {
+  text-align: center;
+  color: black;
 }
 img {
-  border-radius: 50px;
-  padding: 50px dashed red;
-  width: 600px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  margin-top: auto;
+  width: 50%;
+}
+.page {
+  background: silver;
+  align-items: center;
+}
+
+.imgContainer {
+  height: 50%;
+  margin-bottom: auto;
+  margin-top: 50 px;
+  margin-left: auto;
+  margin-right: auto;
+  display: inline-block;
 }
